--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# This file is part of Opal.About and has been released into the public domain.
+# This file is part of Opal.Delegates and has been released into the public domain.
 # SPDX-License-Identifier: CC0-1.0
 # SPDX-FileCopyrightText: 2020-2021 Mirian Margiani
 
